--- a/style.css
+++ b/style.css
@@ -249,7 +249,7 @@ blockquote{
 	padding: 10px;
 	border-top: 1px solid #665544;
 	border-bottom: 1px solid #665544;}
-div.proto{
+div.table-of-contents-60{
 	width:60%;
 }
 div.sub{
