--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,10 @@ div.navbar{
 	padding:0;
 	outline:0;
 }
+div.page{
+	width:100%;
+	height:100%;
+}
 h1{ &//&: font-family: pisana;
 	background-color: #4a8000;
 	color: white;
@@ -94,6 +98,7 @@ div.sidebar{
 	margin:0;
 	border:0;
 	float:left;
+	margin:0;
 }
 div.content-unlimited{
 	background-color: #ffffff;
@@ -117,7 +122,7 @@ div.content{
 div.content2{
 	float:right;
 	background-color: #ffffff;
-    width: 80%;
+    width: 83%;
 	height:100%;
 	padding: 25px;
     margin-top: 0px;
@@ -215,6 +220,18 @@ div.footer{
 	outline:0;
 	position:bottom;
 	
+}
+div.footer-sidebar{
+	margin:0px;
+	text-align: center;
+	background-color: #575135;
+	color: white;
+	font-size: 18px;
+	font-family: "Arya";
+	width: 15%;
+	padding-right: 25px;
+	padding-left: 25px;
+	outline:0;
 }
 #abilities{
 	background-color:#4a8000;
