--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,7 +33,7 @@ div.navbar{
 	outline:0;
 }
 div.page{
-	width:100%;
+	width:auto;
 	height:100%;
 }
 h1{ &//&: font-family: pisana;
@@ -92,7 +92,7 @@ div.sidebar{
 	color: white;
 	text-align:center;
 	height: 100%;
-	width: 15%;
+	width: 16%;
 	padding:0;
 	outline:0;
 	margin:0;
@@ -122,15 +122,16 @@ div.content{
 div.content2{
 	float:right;
 	background-color: #ffffff;
-    width: 83%;
+    width: 80%;
 	height:100%;
-	padding: 25px;
+	padding: 2%;
     margin-top: 0px;
 	margin-bottom: 0px;
 	border-top: 0px;
 	border-bottom: 0px;
 	border-left:0px;
-	margin-left;0px:
+	margin-left:0px;
+	position:static;
 }
 div.content3{
 	float:right;
@@ -141,6 +142,12 @@ div.content3{
 	margin-bottom: 0px;
 	border-top: 0px;
 	border-bottom: 0px;
+}
+div.content-0-padding{
+	padding:0;
+	margin:0;
+	outline:0;
+	border:0;
 }
 #sidebar{
 	list-style-type :none;
@@ -159,6 +166,9 @@ div.block{
 	background-color:Green;
 	width:100%;
 	float:center;
+	padding:0;
+	margin-top:0px;
+	border:0;
 }
 div.akce{
 	margin-top: 0;
@@ -228,10 +238,9 @@ div.footer-sidebar{
 	color: white;
 	font-size: 18px;
 	font-family: "Arya";
-	width: 15%;
-	padding-right: 25px;
-	padding-left: 25px;
+	width: 260px;
 	outline:0;
+	padding:0;
 }
 #abilities{
 	background-color:#4a8000;
@@ -338,12 +347,3 @@ h3.spis{
 p.center{
 	text-align:center;
 }
-
-
-
-
-
-
-
-
-
