--- a/public/css/style.css
+++ b/public/css/style.css
@@ -137,7 +137,7 @@ div.content3{
 	float:right;
 	background-color: #ffffff;
     width: 80%;
-	padding: 25px;
+	padding: 2%;
     margin-top: 0px;
 	margin-bottom: 0px;
 	border-top: 0px;
