fixed footer width for proper display

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -238,7 +238,7 @@ div.footer-sidebar{
 	color: white;
 	font-size: 18px;
 	font-family: "Arya";
-	width: 260px;
+	width:16%;
 	outline:0;
 	padding:0;
 }
